fix alignments

--- a/src/Tickets/Blocks/Ticket/app/editor/container-header/price/style.pcss
+++ b/src/Tickets/Blocks/Ticket/app/editor/container-header/price/style.pcss
@@ -6,7 +6,7 @@
 	font-size: var(--tec-font-size-3);
 	font-style: normal;
 	font-weight: var(--tec-font-weight-bold);
-	line-height: var(--tec-line-height-3);
+	line-height: 26px;
 	margin: 0 20px 0 15px;
 	min-width: 65px;
 	padding-bottom: 5px;
@@ -46,4 +46,6 @@
 	font-size: var(--tec-font-size-1);
 	text-decoration: line-through;
 	color: var(--tec-color-text-secondary);
+	margin-top: 11px;
+	line-height: 17px;
 }
