--- a/src/Tickets/Blocks/Ticket/app/editor/container-header/style.pcss
+++ b/src/Tickets/Blocks/Ticket/app/editor/container-header/style.pcss
@@ -34,4 +34,15 @@
 	font-size: var(--tec-font-size-0);
 	font-weight: var(--tec-font-weight-bold);
 	padding: 4px 6px;
+	margin-bottom: 5px;
+}
+
+.tribe-editor__ticket-on-sale {
+	.tribe-editor__ticket__container-header-price__sale-price {
+		padding-top: 2px;
+	}
+
+	.tribe-editor__ticket__container-header-quantity {
+		padding-top: 30px;
+	}
 }
